# dectalk

./: .gitignore  AudioMapping.h  CMakeLists.txt  C_US_CDE.H  Cebuild.bat  Copy of Cebuild.bat  Copy of epsonapi.c  Dockerfile  FilterFunctions.c  FonixAudioIn.h  FonixAudioOut.h  FonixCore.h  Makefile  Makefile.in  Makefile.sub  Makefile.sub.in  PAR_DICF.C  PAR_RULE.H  PAR_TES.H  PRODCLN.BAT  README.md  S1C33Audio.h  S1C33Memory.h  SETVAR.BAT  STEPS.SH  Speak.h  Speaker.c  TO_UNIX.BAT  VCVARS32.BAT  bats.txt  binary.txt  cmd.h  cmd_char.c  cmd_cmd.c  cmd_def.h  cmd_err.c  cmd_get.c  cmd_lts.c  cmd_main.c  cmd_pars.c  (+150 more)
src/: .gitignore  CMakeLists.txt  Cebuild102802.bat  DECtalk.c  DECtalk.dsw  DECtalk.sln  LICENCE  Makefile  Makefile.in  Makefile.sub  Makefile.sub.in  TO_UNIX.BAT  aclocal.m4  autogen.sh  config.h.cmakedefine  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.in  configure~  dapi.wasm  dapi.wasm.map  dapi.wasm.symbols  dectalk.iss  dectalk32.bat  dectalkf.h  dectalkf_hlsyn.h  dectalkf_klsyn.h  dectalkf_old.h  dectalkf_oldsynth.h  file_time.bat  prodbld.doc  prodmak.bat  sapi5.iss  say.html.symbols  say.js  say.wasm  say.wasm.map
src/CPanel/src/: CPDLL.dep  CPDLL.mak  cpanel.c  cpapi.h  cpapi.txt  test.c
src/Installation/: autorun.inf  kitmedia.bat
src/Installation/Sapi 500/: license.txt
src/Installation/Windows CE DECtalk/: Build.bat  Windows CE DECtalk.ipr
src/Installation/Windows DECtalk/: Build.bat  kitmedia.bat
src/Installation/Windows DECtalk Demos/: Windows DECtalk Demos._ip  Windows DECtalk Demos.ipr
src/Sapi5/: TtsEng.tlb  sapi5.dep  sapi5.dsp  sapi5.dsw  sapi5.mak  ttseng_i.c
src/Sapi5/IDL/: sapiaut.idl
src/Sapi5/Include/: sapi.h  shfolder.h  sperror.h
src/Sapi5/src/: stdafx.h  ttseng.rc  ttsengobj.rgs  ttsengobjfr.rgs  ttsengver.h  version.rc2
src/Txt16bit/: apndx_c.txt  apndx_e.txt  basevorg.txt  chap_2.txt  chap_5.txt  chap_6.txt  command.txt  contents.txt  develop.txt  digitize.txt  dll.wri  dll_demo.txt  dll_inst.txt  fileorgn.txt  globals.txt  kern.txt  lib.txt  names.txt  progrmng.txt  readme.txt  singing.txt  tape_lvl.txt  title.txt  toolkit.txt  v41_read.me  version.txt  voc_ctrl.txt  vtm_i.txt
src/autom4te.cache/: output.0  requests  traces.0
src/dapi/src/: CMakeLists.txt  DECtalk API.vcxproj  DECtalk API.vcxproj.filters  DIC.MAK  Internal Dictionary Compiler.sln  Internal Dictionary Compiler.vcxproj  Makefile  Makefile.in  Makefile.sub  Makefile.sub.in  WTLKSTAT.DSW  Wtlkstat.dep  Wtlkstat.dsp  Wtlkstat.mak  armapp.dsp  armapp.dsw  armltsfr.dsp  armltsgr.dsp  armltsla.dsp  armltssp.dsp  armltsuk.dsp  armltsus.dsp  armtest.dsp  armtest.dsw  builddic.bat  cedll.dep  cedll.vco  cedll.vcp  d2static.dep  d2static.dsp  d2static.dsw  d2static.mak  d2static.plg  dectalk.def  dectalkvb.dsp  dectalkvb.dsw  demostat.dsp  demostat.mak  devdtk43.dep  devdtk43.dsp  (+21 more)
src/dapi/srcold/: CE.MAK  CE.VCP  Ce.vcb  Ce.vcw  Makefile.sub.in  WTLKSTAT.DSW  armapp.dsw  armltsgr.dsp  armtest.dsp  cedll.vcw  d2static.mak  d2static.ncb  d2static.plg  dectalkvb.dsp  dectalkvb.dsw  demostat.dep  demostat.dsp  demostat.dsw  demostat.mak  devdtk43.dep  devdtk43.dsp  dic.ncb  dic.opt  dic.plg  dtdemo.dsw  dtdemo.ncb  dtdemo.opt  dtlkstat.dsp  dtlkstat.dsw  dtlkstat.mak  dtlkstat.ncb  dtstatic.dsp  dtstatic.dsw  dtstatic.mak
src/docs/: DTK_PG_5_0.ps  DT_INST_45.PS  DT_REF_45.DOC  DT_REF_45.PS  DT_REF_46.PS  dtalk_lic.doc  dtalk_lic2.doc  mlprog.doc  nt_apa.doc  nt_apa.rtf  nt_apa1.doc  nt_api.doc  nt_glo11.doc  nt_tro.doc  ref1.doc  ref3.doc  ref_1.doc  ref_2.hh  sdk_1.hh  sdk_2.hh
src/docsosf/html/: _blank.htm  dectalk.ali  dectalk.hh  dectalk.hhs  dectalk.htm  dectalk_software_apis.htm  dial_tones_dial.htm  dynamic_engine.htm  ehlpdht1.js  email.htm  email_mode_example.htm  english_us_uk.htm  ftsform.htm  how_it_works.htm  idh_betty_1_ttsapi_h.htm  idh_do_not_use_audio_device_0x80000000_ttsapi_h.htm  idh_harry_2_ttsapi_h.htm  idh_kit_5_ttsapi_h.htm  idh_log_phonemes_0x00000002_ttsapi_h.htm  idh_log_text_0x00000001_ttsapi_h.htm  idh_nt_apps__tab_file.htm  idh_nt_apps_allophone.htm  idh_nt_apps_associating_the_macro_with_atool_bar_button.htm  idh_nt_apps_changing_voice_selections.htm  idh_nt_apps_clause_mode.htm  idh_nt_apps_clause_terminator.htm  idh_nt_apps_creating_a_word_macro.htm  idh_nt_apps_dectalk_voices_and_their_associated_values.htm  idh_nt_apps_dictionary_options.htm  idh_nt_apps_flush.htm  idh_nt_apps_help_options.htm  idh_nt_apps_heuristic.htm  idh_nt_apps_highlighting_text_as_it_is_spoken_illustrated.htm  idh_nt_apps_input_options.htm  idh_nt_apps_intonation.htm  idh_nt_apps_launching_and_configuring_the_dectalk_tts_server.htm  idh_nt_apps_output_options.htm  idh_nt_apps_overview_of_the_user_dictionary_build_tool.htm  idh_nt_apps_phoneme_arpabet_command.htm  idh_nt_apps_phoneme_string.htm  (+139 more)
src/docsosf/man/: .DTKMANRT.whatis  Imakefile  Makefile
src/docsosf/ps/: dtk_reference_guide.ps
src/docsosf/txt/: dtk450_reference_guide.txt  dtk450_release_notes_dev.txt  dtk450_release_notes_rt.txt  dtk_install_guide.txt  dtk_prog_guide.txt  dtk_reference_guide.txt  say.txt  speak.txt  windict.txt
src/dtalkml/src/: DTalkML.dep  DTalkML.dsw  DTalkML.mak  DTalkML.ncb  DTalkML.opt  DTalkMLCE.dep  DTalkMLCE.mak  DTalkMLCE.vcb  DTalkMLCE.vcn  Makefile  Makefile.in  dtalk_ml.c  dtalk_ml.c.old  init.c  testit.c
src/emscripten/: .gitignore  .yarnrc.yml  CMakeLists.txt  README.md  esbuild.js  package-lock.json  package.json
src/emscripten/fs/: dtalk_us.dic
src/emscripten/src/: App.tsx  emscripten.d.ts
src/hardware/src/: dtpccjlt.mak  hardmak.bat  testload.bat
src/help/: DECTALK.CNT  DECTALK.HLP
src/kitosf/: lmf.csh
src/kitosf/ivp/: DTKRT460.ivp  DTKRT461.ivp  DTKUNSUPPORTED450.ivp
src/kitosf/kitbld/: DEC_COPYRIGHT  DTKDEV450.k  DTKDEV450.mi  DTKDEV460.k  DTKDEV460.mi  DTKDEV461.k  (+17 more)
src/kitting/: License.rtf  appendix2.txt  betacopy.bat  cecdcopy.bat  cedemocopy.bat  democopy.bat  files.doc  finfo.c  finfo.dsp  finfo.mak  kitcopy.bat  readme.doc  swaplang.txt  testinst.bat  wtalkver.txt
src/nvda/: manifest.ini
(+7641 files in other folders)
